@@ -32,7 +32,8 @@ subtest 'Test instance' => sub {
                 # Log::Dispatch::CronoDir
                 filename => 'test.log',
                 )
-        } 'Missing dirname_pattern';
+        }
+        'Missing dirname_pattern';
 
         dies_ok {
             $class->new(
@@ -45,7 +46,8 @@ subtest 'Test instance' => sub {
                 # Log::Dispatch::CronoDir
                 dirname_pattern => '/var/log/tmp/%Y/%m/%d',
                 )
-        } 'Missing filename';
+        }
+        'Missing filename';
     };
 
     subtest 'Succeeds with valid params' => sub {
@@ -128,46 +130,52 @@ subtest 'Test log_message' => sub {
     };
 };
 
-subtest 'Test permissions option' => sub {
-    my $guard = mock_guard($class => { _localtime => sub { (0, 0, 0, 1, 0, 100) }, });
+SKIP: {
 
-    subtest 'permissions => 0777' => sub {
-        my $dir = tempdir(CLEANUP => 1);
-        my $log = Log::Dispatch::CronoDir->new(
+    skip "Directory permissions are always 0777 on Windows OS, and thus not testable"
+        if $^O eq 'MSWin32';
 
-            # Log::Dispatch::Output
-            name      => 'foobar',
-            min_level => 'debug',
-            newline   => 1,
+    subtest 'Test permissions option' => sub {
+        my $guard = mock_guard($class => { _localtime => sub { (0, 0, 0, 1, 0, 100) }, });
 
-            # Log::Dispatch::CronoDir
-            dirname_pattern => File::Spec->catdir($dir, qw( %Y %m %d )),
-            permissions     => 0777,
-            filename        => 'test.log',
-        );
-        my $dirmode = (stat(File::Spec->catdir($dir, qw(2000 01 01))))[2];
+        subtest 'permissions => 0777' => sub {
+            my $dir = tempdir(CLEANUP => 1);
+            my $log = Log::Dispatch::CronoDir->new(
 
-        is sprintf("%04o", $dirmode & 0777), '0777';
+                # Log::Dispatch::Output
+                name      => 'foobar',
+                min_level => 'debug',
+                newline   => 1,
+
+                # Log::Dispatch::CronoDir
+                dirname_pattern => File::Spec->catdir($dir, qw( %Y %m %d )),
+                permissions     => 0777,
+                filename        => 'test.log',
+            );
+            my $dirmode = (stat(File::Spec->catdir($dir, qw(2000 01 01))))[2];
+
+            is sprintf("%04o", $dirmode & 0777), '0777';
+        };
+
+        subtest 'permissions => none' => sub {
+            my $dir = tempdir(CLEANUP => 1);
+            my $log = Log::Dispatch::CronoDir->new(
+
+                # Log::Dispatch::Output
+                name      => 'foobar',
+                min_level => 'debug',
+                newline   => 1,
+
+                # Log::Dispatch::CronoDir
+                dirname_pattern => File::Spec->catdir($dir, qw( %Y %m %d )),
+                filename        => 'test.log',
+            );
+            my $dirmode = (stat(File::Spec->catdir($dir, qw(2000 01 01))))[2];
+
+            is sprintf("%04o", $dirmode & 0777), '0755';
+        };
     };
-
-    subtest 'permissions => none' => sub {
-        my $dir = tempdir(CLEANUP => 1);
-        my $log = Log::Dispatch::CronoDir->new(
-
-            # Log::Dispatch::Output
-            name      => 'foobar',
-            min_level => 'debug',
-            newline   => 1,
-
-            # Log::Dispatch::CronoDir
-            dirname_pattern => File::Spec->catdir($dir, qw( %Y %m %d )),
-            filename        => 'test.log',
-        );
-        my $dirmode = (stat(File::Spec->catdir($dir, qw(2000 01 01))))[2];
-
-        is sprintf("%04o", $dirmode & 0777), '0755';
-    };
-};
+}
 
 subtest 'Test binmode option' => sub {
     my $guard = mock_guard($class => { _localtime => sub { (0, 0, 0, 1, 0, 100) }, });
